--- a/android/res/xml-v21/prefs_misc.xml
+++ b/android/res/xml-v21/prefs_misc.xml
@@ -30,4 +30,11 @@
     android:defaultValue="false"
     android:switchTextOff=""
     android:switchTextOn=""/>
+
+  <ListPreference
+    android:key="@string/pref_use_mobile_data"
+    android:title="@string/mobile_data"
+    android:summary="@string/mobile_data_option_ask"
+    android:entries="@array/mobile_data_options"
+    android:entryValues="@array/mobile_data_options_values"/>
 </PreferenceScreen>
