--- a/android/res/values/string-arrays.xml
+++ b/android/res/values/string-arrays.xml
@@ -47,6 +47,7 @@
     <item>@string/mobile_data_option_always</item>
     <item>@string/mobile_data_option_never</item>
     <item>@string/mobile_data_option_not_today</item>
+    <item>@string/mobile_data_option_today</item>
   </string-array>
 
   <string-array name="mobile_data_options_values">
@@ -54,5 +55,6 @@
     <item>1</item>
     <item>2</item>
     <item>3</item>
+    <item>4</item>
   </string-array>
 </resources>
