--- a/android/res/values/themes-base.xml
+++ b/android/res/values/themes-base.xml
@@ -48,6 +48,7 @@
     <item name="buttonBackground">@drawable/button</item>
     <item name="buttonTextColor">@color/button_text</item>
     <item name="buttonTextColorDisabled">@color/button_text_disabled</item>
+    <item name="buttonDialogTextColor">@color/base_accent</item>
 
     <item name="accentButtonBackground">@drawable/button_accent</item>
     <item name="accentButtonTextColor">@color/button_accent_text</item>
@@ -141,6 +142,7 @@
     <item name="buttonBackground">@drawable/button_night</item>
     <item name="buttonTextColor">@color/button_text_night</item>
     <item name="buttonTextColorDisabled">@color/button_text_disabled_night</item>
+    <item name="buttonDialogTextColor">@color/base_accent_night</item>
 
     <item name="accentButtonBackground">@drawable/button_accent_night</item>
     <item name="accentButtonTextColor">@color/button_accent_text_night</item>
