--- a/android/res/layout/item_search_clear_history.xml
+++ b/android/res/layout/item_search_clear_history.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
           style="@style/MwmWidget.TextView.Search"
+          android:layout_marginBottom="?actionBarSize"
           android:text="@string/clear_search"
           android:drawableLeft="@drawable/ic_cancel"/>
