--- a/android/res/values/font_sizes.xml
+++ b/android/res/values/font_sizes.xml
@@ -16,6 +16,7 @@
   <dimen name="text_size_caption">14sp</dimen>
   <dimen name="text_size_icon_title">10sp</dimen>
   <dimen name="text_size_button">16sp</dimen>
+  <dimen name="text_size_ads">8sp</dimen>
 
   <!-- BASE TEXT SIZES -->
 
