--- a/android/res/values/themes-base.xml
+++ b/android/res/values/themes-base.xml
@@ -86,11 +86,18 @@
 
     <item name="bannerText">@color/text_banner_color</item>
     <item name="bannerBackground">@color/bg_banner_color</item>
+    <item name="bannerButtonBackground">@color/bg_banner_button_color</item>
+    <item name="adsBackground">@drawable/bg_ads</item>
+    <item name="adsText">@color/text_ads_color</item>
+    <item name="adsActionBackground">@drawable/bg_ads_action</item>
+    <item name="textBannerTitle">@color/black_60</item>
 
     <item name="steadyIconTint">@color/black_secondary</item>
     <item name="steadyIconBackground">@drawable/bg_steady_icon</item>
     <item name="activeIconTint">@color/bg_cards</item>
     <item name="activeIconBackground">@drawable/bg_active_icon</item>
+
+    <item name="warmGray">@color/warm_gray</item>
   </style>
 
   <!-- Night theme -->
@@ -180,10 +187,17 @@
 
     <item name="bannerText">@color/text_banner_color_night</item>
     <item name="bannerBackground">@color/bg_banner_color_night</item>
+    <item name="bannerButtonBackground">@color/bg_banner_button_color_night</item>
+    <item name="adsBackground">@drawable/bg_ads_night</item>
+    <item name="adsText">@color/text_ads_color_night</item>
+    <item name="adsActionBackground">@drawable/bg_ads_action_night</item>
+    <item name="textBannerTitle">@color/white_60</item>
 
     <item name="steadyIconTint">@color/white_secondary</item>
     <item name="steadyIconBackground">@drawable/bg_steady_icon_night</item>
     <item name="activeIconTint">@color/bg_cards_night</item>
     <item name="activeIconBackground">@drawable/bg_active_icon_night</item>
+
+    <item name="warmGray">@color/warm_gray_night</item>
   </style>
 </resources>
