[android] Review fixes

--- a/android/res/layout/place_page_banner.xml
+++ b/android/res/layout/place_page_banner.xml
@@ -53,7 +53,6 @@
       android:layout_height="wrap_content"
       android:layout_toEndOf="@id/iv__banner_icon"
       android:layout_toRightOf="@id/iv__banner_icon"
-
       android:gravity="center_vertical">
       <TextView
         android:id="@+id/tv__ads"
@@ -61,7 +60,7 @@
         android:layout_height="@dimen/margin_half_plus"
         android:layout_marginRight="@dimen/margin_quarter"
         android:layout_marginEnd="@dimen/margin_quarter"
-        android:textSize="@dimen/text_size_ads"
+        android:textSize="@dimen/text_size_banner"
         android:textColor="?adsText"
         android:gravity="center"
         android:background="?adsBackground"
