--- a/android/res/layout/layout_nav_bottom_numbers.xml
+++ b/android/res/layout/layout_nav_bottom_numbers.xml
@@ -17,8 +17,8 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center_horizontal"
-    android:layout_marginBottom="@dimen/neg_margin_quarter">
+    android:layout_marginBottom="@dimen/neg_margin_quarter"
+    android:layout_marginTop="@dimen/nav_menu_top_offset">
     <!-- Speed -->
     <LinearLayout
       android:layout_width="wrap_content"
@@ -34,7 +34,6 @@
         android:id="@+id/speed_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/neg_margin_quarter"
         android:lines="1"
         android:textAppearance="@style/MwmTextAppearance.RoutingNumber.Navigation"
         tools:text="999"/>
@@ -95,7 +94,7 @@
     <LinearLayout
       android:id="@+id/distance_frame"
       android:layout_width="wrap_content"
-      android:layout_height="match_parent"
+      android:layout_height="wrap_content"
       android:minWidth="@dimen/nav_numbers_side_min_width"
       android:orientation="vertical"
       android:paddingLeft="@dimen/nav_numbers_margin"
@@ -107,7 +106,6 @@
         android:id="@+id/distance_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/neg_margin_quarter"
         android:lines="1"
         android:textAppearance="@style/MwmTextAppearance.RoutingNumber.Navigation"
         tools:text="99999"/>
