[android] text of facility is limited to 2 lines.

--- a/android/res/layout/item_facility.xml
+++ b/android/res/layout/item_facility.xml
@@ -20,5 +20,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textAppearance="@style/MwmTextAppearance.Body3.Primary"
+    android:maxLines="2"
+    android:ellipsize="end"
     tools:text="Pets are allowed on request"/>
 </LinearLayout>
